--- a/template/pwa/pages/lieux.html
+++ b/template/pwa/pages/lieux.html
@@ -45,7 +45,12 @@
                 
             </div>
             <div class="m-center">
-                <h2>equipe</h2>
+                <h2 id='cook' style="display: inline;"></h2>
+				<script>
+					document.cookie= name;
+					var c = document.cookie;
+					document.getElementById('cook').innerHTML = c;
+				</script>		>
                 
                
             </div>
@@ -60,9 +65,19 @@
 				<br><br>
 				
 				<h1>Quel est votre lieu d'arrivée ?</h1><br>
+				
+				<script language="javascript">
+					function FormOnSubmit(paramnode)
+					{
+						if (paramnode['lieu'].value=='louvre') paramnode.action='bonne-rep.html';
+						else paramnode.action='mauvaise-rep.html';
 					
-				<form action="pages/choix2.html" method="get">
-					<input type="text" id="name" name="user_name" required>
+						return true;
+					}
+				</script>
+
+				<form action="" method="get" onsubmit="javascript:FormOnSubmit(this)">
+					<input type="text" id="lieu" name="lieu" required>
 					<br><br>
 					<input type="Submit" value="Valider" >
 				</form>
