--- a/template/pwa/pages/mr-bonne.html
+++ b/template/pwa/pages/mr-bonne.html
@@ -39,32 +39,43 @@
 
 	</head>
 	<body>
-
+        <nav class="menu" role="navigation">
+            <div class="m-left">
+              
+                </h1>
+            </div>
+            <div class="m-center">
+                <h2 id='cook' style="display: inline;"></h2>
+				<script>
+					document.cookie= name;
+					var c = document.cookie;
+					document.getElementById('cook').innerHTML = c;
+				</script>		
+            </div>
+        </nav>
+        
 		<!-- main -->
 
-		
-	
-			<div class="header">
+		<div class="allq">
+            <div class="question">
+				<br><br><h3>Quelle est la hauteur de la Tour Eiffel ?</h3>
 				
-				<img src="../images/marker-blanc.png" alt=""  width="19%" /><br><br>
-				<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1><br>
-					
-				<form action="choix2.html" method="GET" id="monFormulaire">
-					<input type="hidden" id="score" name="score" value="0" required>
-					<input  type="text" id="name" name="name" onkeyup="this.value=this.value.toUpperCase()" required>
-					
-					<br>
-					<input type="Submit" value="Valider" >
-				</form>
-				
-			</div>
-					
-	
+            </div>
+           
+		    <div class="bn">
+                <img src="../images/tour.jpg" style="width: 50%;"/>
+                <br><br>
+                <a href="map.html"><input type="button" value="suivant"></a>
+            </div>
+        
+       		
+		</div>
 		<!-- //main-->
 
 		<!-- js -->
 		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 		<!-- //js -->
-		<script src="js/main.js"></script>
+        <script src="js/main.js"></script>
+   
 	</body>
 </html>
