--- a/template/pwa/pages/choix2.html
+++ b/template/pwa/pages/choix2.html
@@ -65,21 +65,27 @@
 	return vars;
 }
 var $_GET = $_GET(),
-    name = $_GET['name'];	
+	name = encodeURIComponent( $_GET['name'] ).replace('%2B',' ');	
+	score= $_GET['score']
+		
+	
 				
 				</script>
 		<div id="name"></div>
+		<div id="score"></div>
 				
 <script>
 	
-	function processUser()
-	{
-	  var parameters = location.search.substring(1).split("&");
-  
-	  var temp = parameters[0].split("=");
-	  l = unescape(temp[1]);
-	  
-	  document.getElementById("name").innerHTML = l;
+	 function processUser()
+  {
+    var parameters = location.search.substring(1).split("&");
+
+    var temp = parameters[0].split("=");
+    l = unescape(temp[1]);
+    temp = parameters[1].split("=");
+    p = unescape(temp[1]);
+    document.getElementById("name").innerHTML = l;
+    document.getElementById("score").innerHTML = p;
 	  
 	}
 
@@ -90,7 +96,16 @@ var $_GET = $_GET(),
 	document.cookie= name;
 	var c = document.cookie;
 	
+document.write(name)
+	  
 </script>
+
+<p id='cook2'></p>
+<script>
+document.write(score);
+	  
+</script>
+
 				<br>
 				<br>
 				<div class="map2" id="map2">
