--- a/template/pwa/pages/choix2.html
+++ b/template/pwa/pages/choix2.html
@@ -66,7 +66,7 @@
 }
 var $_GET = $_GET(),
 	name = encodeURIComponent( $_GET['name'] ).replace('%2B',' ');	
-	score= $_GET['score']
+	score =	$_GET['score'];
 		
 	
 				
@@ -102,7 +102,9 @@ document.write(name)
 
 <p id='cook2'></p>
 <script>
-document.write(score);
+	document.cookie= score;
+	var c2 = document.cookie;
+	document.write(score);
 	  
 </script>
 
