--- a/template/pwa/pages/equipe.html
+++ b/template/pwa/pages/equipe.html
@@ -51,7 +51,7 @@
 					
 				<form action="choix2.html" method="GET" id="monFormulaire">
 					<input type="hidden" id="score" name="score" value="0" required>
-					<input  type="text" id="name" name="name" onkeyup="this.value=this.value.toUpperCase()" required>
+					<input  type="text" id="team" name="team" onkeyup="this.value=this.value.toUpperCase()" required>
 					
 					<br>
 					<input type="Submit" value="Valider" >
