--- a/template/pwa/pages/mr-bonne.html
+++ b/template/pwa/pages/mr-bonne.html
@@ -47,10 +47,44 @@
             <div class="m-center">
                 <h2 id='cook' style="display: inline;"></h2>
 				<script>
-					document.cookie= name;
-					var c = document.cookie;
-					document.getElementById('cook').innerHTML = c;
-				</script>		
+					function creerCookie(nom,valeur,jour){
+						if(jour){
+							var date = new Date();
+							date.setTime(date.getTime()+(jour*24*60*60*1000));
+							var exp = '; expires='+date.toGMTString();
+						}
+						else{
+							var exp = '';
+						}
+						document.cookie = nom+'='+valeur+exp+';path=/';
+					}
+			
+					function lireCookie(nom){
+						var nomEtEgal = nom + '=';
+						var cTableau = document.cookie.split(';');
+						for(var i=0;i<cTableau.length; i++){
+							var c = cTableau[i];
+							while(c.charAt(0)==' '){
+								c = c.substring(1,c.length);
+							}
+							if(c.indexOf(nomEtEgal) == 0){
+								return c.substring(nomEtEgal.length,c.length);
+							}
+						}
+						return null
+					}
+			
+					function supprimerCookie(nom){
+						creerCookie(nom,'',-1);
+					}
+			
+			
+			
+					var affiche = document.getElementById('cook');
+					affiche.innerHTML =  lireCookie('team');
+					var affiche2 = document.getElementById('cook2');
+					affiche2.innerHTML = lireCookie('score');
+                </script>
             </div>
         </nav>
         
