--- a/template/pwa/css/style-class.css
+++ b/template/pwa/css/style-class.css
@@ -797,46 +797,65 @@ input[type="email"] {
     margin-top: 1%;
 }
 
+.head-time{
+    width: 100%;
+    height: 10%;
+    
+    margin-top: 1%;
+    text-align: center;
+    }
+
 .text-classement{
 width: 25%;
-height: 10%;
+height: 100%;
 background-color: black;
-margin-top: 1%;
+
 text-align: center;
+float: left;
+}
+.time{
+    width: 12%;
+height: 100%;
+background-color: black;
+
+text-align: center;
+float: right;
+border-radius: 20px;
+margin-right: 6%;
 }
 
 .classement{
-    background-color: chartreuse;
+    
     width: 100%;
     height: 70%;
     margin-top: 2%;
 }
 
 .premier{
-    background-color: darkblue;
-    width: 42%;
+    
+    width: 37%;
     height: 100%;
-    margin-left: 3%;
+    margin-left: 7%;
     float: left;
 }
 
 .reste{
-    background-color: red;
+    
     width: 55%;
     height: 100%;
     float: right;
 }
 
 .deuxieme{
-    background-color: royalblue;
+    
     width: 30%;
     height: 90%;
     margin-top: 3%;
-    margin-left: 3%;
+    
     float: left;
 }
 .troisieme{
-    background-color: rgb(90, 23, 81);
+    
     width: 30%;
     height: 90%;
     margin-top: 3%;
@@ -845,10 +864,38 @@ text-align: center;
 }
 
 .quartieme{
-    background-color: rgb(90, 23, 81);
+    
     width: 30%;
     height: 90%;
     margin-top: 3%;
     margin-left: 3%;
     float: left;
 }
+
+.text-wrapper{
+
+ width: 70%;
+ position: relative;
+ margin-top: -50% ;
+ text-align: center;
+}
+
+.text-wrapper2{
+    
+     width: 80%;
+     position: relative;
+     margin-top: -65% ;
+     text-align: center;
+    }
+
+    p {
+        color: white;
+        font-size: 2.5vw;
+        font-family: 'azonix';
+    }
+
+    .text-wrapper2 p {
+        color: white;
+        font-size: 1.5vw;
+        font-family: 'azonix';
+    }
