--- a/template/pwa/pages/cadeaux.html
+++ b/template/pwa/pages/cadeaux.html
@@ -56,7 +56,7 @@
 	</div>
 		
         <div class="classement">
-            <div class="premier">
+            <div class="premier2">
 				<img src="../images/premier.png" width="70%"/>
 				<div class="text-wrapper">
 					<p id ='cook'>
@@ -115,8 +115,15 @@
 						</p>
 				</div>
             </div>
-            <div class="reste" style="background-color: aqua;">
-               
+            <div class="reste2" style="margin-top: 5%;" >
+                <img src="../images/gain.png" width="80%"/>
+                <div class="text-wrapper3">
+                    <h4> 4 entrées<br>
+                        gratuites<br> </h4>
+                       <h3> pour visiter<br>
+                        le Louvre<br>
+                    </h3>
+                </div>
 			</div>
 			
         </div>
