--- a/template/pwa/pages/map.html
+++ b/template/pwa/pages/map.html
@@ -113,7 +113,7 @@
       </h1>
 
 				<div class="m-right"  style="margin-top: 3%;">
-				<p><a id="lien-lieu" href="lieux.html" class="m-link">Lieu d'arivée</a></p>
+				<p><a id="lien-lieu" href="lieux.html" class="m-link">Lieu d'arrivée</a></p>
       </div>
 
      
