--- a/template/pwa/pages/equipe.html
+++ b/template/pwa/pages/equipe.html
@@ -47,7 +47,7 @@
 			<div class="header">
 				
 				<img src="../images/marker-blanc.png" alt=""  width="19%" /><br><br>
-				<h1>ENTRER LE NOM DE VOTRE EQUIPE</h1><br>
+				<h1> NOM DE L'EQUIPE</h1><br>
 					
 				<form action="choix2.html" method="GET" id="monFormulaire">
 					<input type="hidden" id="score" name="score" value="0" required>
