--- a/template/pwa/pages/mr-bonne.html
+++ b/template/pwa/pages/mr-bonne.html
@@ -97,7 +97,7 @@
             </div>
            
 		    <div class="bn">
-                <img src="../images/tour.jpg" style="width: 50%;"/>
+                <img src="../images/tour.png" style="width: 45%;"/>
                 <br><br>
                 <a href="map.html"><input type="button" value="suivant"></a>
             </div>
