--- a/template/pwa/pages/map.html
+++ b/template/pwa/pages/map.html
@@ -57,7 +57,7 @@
         </div>
   
 				<div class="m-center"  style="margin-top: 3%;">
-          <h1 style="display: inline;">SCORE : <h1 style="display: inline;" id ='cook2'></h1></script> 
+          <h1 style="display: inline;">SCORE : <h1 style="display: inline;" id ='cook2'></h1>
           <h1 style="display: inline;">
           <script>
         function creerCookie(nom,valeur,jour){
@@ -279,7 +279,7 @@
             
           });
           marker.addListener('click',function() {
-            window.location.href = 'question.html';
+            window.location.href = 'question2.html';
           })
         }
 
