--- a/template/pwa/pages/question2.html
+++ b/template/pwa/pages/question2.html
@@ -106,7 +106,7 @@
                 <div class="box2" >
                 <div class="photo-center">
                     
-                    <img src="../images/louvre.jpg" />
+                    <img src="../images/louvre.png" />
                 </div>
                 </div>
             </div>		
