--- a/template/pwa/pages/mr-bonne2.html
+++ b/template/pwa/pages/mr-bonne2.html
@@ -97,7 +97,7 @@
             </div>
            
 		    <div class="bn">
-                <img src="../images/tour.png" style="width: 45%;"/>
+                <img src="../images/louvre-bn.png" style="width: 45%;"/>
                 <br><br>
                 <a href="classement.html"><input type="button" value="suivant"></a>
             </div>
